--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/Style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="" />
+    
     <title>Document</title>
   </head>
   <body>
-    <script src="/Brains.js" type="text/js"></script>
+    <H1>TALK OF THE SEE</H1>
+    <textarea id="input-box"></textarea>
+    <button id="translate-btn">Translate</button>
+    <div id="output-txt">
+     
+    </div>
+
+
+
+
+
+
+    <script src="/Brains.js" type="text/javascript" ></script>
   </body>
 </html>
