--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
     <title>Document</title>
   </head>
   <body>
-    <H1>TALK OF THE SEE</H1>
-    <textarea id="input-box"></textarea>
-    <button id="translate-btn">Translate</button>
-    <div id="output-txt">
+
+
+    <H1 class="header">TALK OF THE SEE</H1>
+
+
+    <textarea class="input-box" id="input-box"></textarea>
+
+
+    <button class="btn" id="translate-btn">Translate</button>
+
+
+    <div class="output-box" id="output-txt">
      
     </div>
 
